cc_binary(
    name = "run_cache_sim",
    srcs = ["src/run_cache_sim.cpp"],

    copts = ["-Werror", "-std=c++17"],  # Treat warnings as errors

    deps = [
        ":ocs_cache_lib",
    ],
)

cc_test(
  name = "basic_functionality_test",
  size = "small",
  srcs = ["test/test_basic_functionality.cpp"],
  deps = ["@com_google_googletest//:gtest_main", ":ocs_cache_lib"],
)

cc_library(
    name = "ocs_cache_lib",
    copts = ["-Werror", "-std=c++17"],  # Treat warnings as errors

    srcs = glob(["lib/*.cpp"]),
    hdrs = glob(["lib/*.h"]),
    deps = [
        # "@com_google_absl//absl/status", # one day i'll make this work lol
    ],
)


