common_copts = ["-Werror", "-Wall", "-std=c++17"]
common_deps = []

cc_binary(
    name = "run_cache_sim",
    copts = common_copts,
  srcs = glob(["src/*.cpp", "src/*.h"]),

    deps = common_deps + [
        "@boost//:program_options",
        ":ocs_cache_lib",
    ],
        linkopts = ["-lpthread"],

)

cc_test(
  name = "basic_functionality_test",
  size = "small",
  copts = common_copts,
  srcs = glob(["test/*.cpp", "test/*.h"]),
  deps = common_deps + ["@com_google_googletest//:gtest_main", ":ocs_cache_lib"],
)

cc_library(
    name = "ocs_cache_lib",
    copts = common_copts,

    srcs = glob(["lib/*.cpp"]),
    hdrs = glob(["lib/*.h"]),
    deps = common_deps 
)


